err/pymania.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mania'...
Compiling './lib/python3.5/site-packages/mania/group_mania.py'...
***   File "./lib/python3.5/site-packages/mania/group_mania.py", line 21
    print nROI
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mania/mania.py'...
***   File "./lib/python3.5/site-packages/mania/mania.py", line 24
    print 'Voxel rejected for not having all ROI data'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mania/synth.py'...
***   File "./lib/python3.5/site-packages/mania/synth.py", line 15
    print 'Error: Input matrix not square'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mania/synth_tools.py'...
***   File "./lib/python3.5/site-packages/mania/synth_tools.py", line 11
    print num.trapz(pdf,x)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mania/utils.py'...
***   File "./lib/python3.5/site-packages/mania/utils.py", line 21
    print 'Error: Input matrix not square'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymania-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
